syntax = "proto3";

import "google/protobuf/empty.proto";

package user.v1;

option go_package = "go-ent/gen/user/v1;userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty) {}
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
  rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {}
  rpc GetUserOne(GetUserOneRequest) returns (GetUserOneResponse) {}
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message GetUserListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetUserListResponse {
  repeated GetUserOneResponse users = 1;
}

message GetUserOneRequest {
  int32 id = 1;
}

message GetUserOneResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}
